acomodando cajas con position

--- a/index.html
+++ b/index.html
@@ -34,9 +34,29 @@
 			</article>
 		</section>
 		<aside>
-			<h3>Sidebar</h3>
+			<div class="sidebar"><h3>Sidebar</h3></div>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero maxime sed fugit tenetur nesciunt molestias blanditiis, dolorum in ducimus rerum placeat quibusdam doloremque qui perferendis impedit quisquam, corporis explicabo, assumenda.</p>
 		</aside>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
 	</section>
 
 	<footer>
