--- a/index.html
+++ b/index.html
@@ -26,42 +26,26 @@
 		<section class="main">
 			<article>
 				<h2>Titulo de nustra pagina</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint amet tempora minus impedit consequuntur temporibus perferendis qui recusandae iusto, sunt minima nostrum ratione? Fuga, adipisci necessitatibus. Laborum quam rerum minus.</p>
+				<p class="uno">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint amet tempora minus impedit consequuntur temporibus perferendis qui recusandae iusto, sunt minima nostrum ratione? Fuga, adipisci necessitatibus. Laborum quam rerum minus.</p>
 			</article>
 			<article>
 				<h2>Contenido de importancia</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint amet tempora minus impedit consequuntur temporibus perferendis qui recusandae iusto, sunt minima nostrum ratione? Fuga, adipisci necessitatibus. Laborum quam rerum minus.</p>
+				<p class="dos">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint amet tempora minus impedit consequuntur temporibus perferendis qui recusandae iusto, sunt minima nostrum ratione? Fuga, adipisci necessitatibus. Laborum quam rerum minus.</p>
 			</article>
 		</section>
+
+		<p class="parra">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore recusandae praesentium, unde doloremque doloribus eos fugiat. Consequatur quidem, maxime, a error laborum, soluta consequuntur, tenetur ratione quia inventore assumenda in!</p>
 		<aside>
 			<div class="sidebar"><h3>Sidebar</h3></div>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero maxime sed fugit tenetur nesciunt molestias blanditiis, dolorum in ducimus rerum placeat quibusdam doloremque qui perferendis impedit quisquam, corporis explicabo, assumenda.</p>
+			<p class="tres">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero maxime sed fugit tenetur nesciunt molestias blanditiis, dolorum in ducimus rerum placeat quibusdam doloremque qui perferendis impedit quisquam, corporis explicabo, assumenda.</p>
 		</aside>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
+	
 	</section>
 
 	<footer>
 		<p>Kevin Ariel Mejia Deras 2017 todos los derechos reservados</p>
 	</footer>
+		
 
 </body>
 </html>
