--- a/index.html
+++ b/index.html
@@ -35,11 +35,15 @@
 		</section>
 
 		<p class="parra">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore recusandae praesentium, unde doloremque doloribus eos fugiat. Consequatur quidem, maxime, a error laborum, soluta consequuntur, tenetur ratione quia inventore assumenda in!</p>
+		<br/>
+		
+		<a href="https://www.google.com" target="_black">Google</a> <br/>
+		<a href="https://www.youtube.com" target="_black">Youtube</a><br/>
+
 		<aside>
 			<div class="sidebar"><h3>Sidebar</h3></div>
 			<p class="tres">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero maxime sed fugit tenetur nesciunt molestias blanditiis, dolorum in ducimus rerum placeat quibusdam doloremque qui perferendis impedit quisquam, corporis explicabo, assumenda.</p>
 		</aside>
-	
 	</section>
 
 	<footer>
