listas, haciendo el navbar

--- a/index.html
+++ b/index.html
@@ -10,16 +10,14 @@
 <body>
 
 	<header>
-		<div>
-			<img src="imagenes/pacman.jpg" height="70">
-		</div>
-		<nav>
-			<ul>
+		
+		<!--<nav>-->
+			<ul class="menu">
 				<li><a href="#">Inicio</a></li>
 				<li><a href="#">Quienes somos</a></li>
 				<li><a href="#">Galeria</a></li>
 			</ul>
-		</nav>
+		<!--</nav>-->
 	</header>
 
 	<section class="Wrapper">
@@ -37,8 +35,13 @@
 		<p class="parra">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore recusandae praesentium, unde doloremque doloribus eos fugiat. Consequatur quidem, maxime, a error laborum, soluta consequuntur, tenetur ratione quia inventore assumenda in!</p>
 		<br/>
 		
+		<div>
+			<img src="imagenes/pacman.jpg" >
+		</div>
+		
 		<a href="https://www.google.com" target="_black">Google</a> <br/>
 		<a href="https://www.youtube.com" target="_black">Youtube</a><br/>
+
 
 		<aside>
 			<div class="sidebar"><h3>Sidebar</h3></div>
