--- a/final.html
+++ b/final.html
@@ -13,10 +13,10 @@
 		</div>
 		<nav>
 			<ul>
-				<li><a href="#"></a>Inicio</li>
-				<li><a href="#"></a>Acerca de</li>
-				<li><a href="#"></a>Servicios</li>
-				<li><a href="#"></a>Contacto</li>
+				<li><a href="#">Inicio</a></li>
+				<li><a href="#">Acerca de</a></li>
+				<li><a href="#">Servicios</a></li>
+				<li><a href="#">Contacto</a></li>
 			</ul>
 		</nav>
 
@@ -27,17 +27,19 @@
 			<article>
 				<h2>Aprendiendo a usar CSS</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni consequuntur accusamus porro, at inventore harum ratione! Nobis molestias at repellat laudantium quod sed voluptatum odit ullam quisquam dignissimos, aliquam ipsam.</p>
+				
 			</article>
 			<article>
 				<h2>La practica hace al maestro</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni consequuntur accusamus porro, at inventore harum ratione! Nobis molestias at repellat laudantium quod sed voluptatum odit ullam quisquam dignissimos, aliquam ipsam.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni consequuntur accusamus porro, at inventore harum ratione! Nobis molestias at repellat laudantium quod sed voluptatum odit ullam quisquam dignissimos, aliquam ipsam.</p>
 			</article>
-			<aside>
-				<h3>Este es mi Sidebar</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, eveniet, dolorum nemo quam eaque suscipit quos voluptatum placeat aspernatur corrupti, blanditiis pariatur deleniti exercitationem quas officiis atque repellat facere maiores.</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt unde sequi exercitationem sapiente optio quaerat, animi, iste rem dolorum magni eligendi provident libero amet quas expedita a voluptatibus sed pariatur!</p>
-			</aside>
 		</section>
+		<aside>
+			<h3>Este es mi Sidebar</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, eveniet, dolorum nemo quam eaque suscipit quos voluptatum placeat aspernatur corrupti, blanditiis pariatur deleniti exercitationem quas officiis atque repellat facere maiores.</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt unde sequi exercitationem sapiente optio quaerat, animi, iste rem dolorum magni eligendi provident libero amet quas expedita a voluptatibus sed pariatur!</p>
+		</aside>
 	</section>
 
 	<footer>
